# jt_cleaner

./: .env.example  .gitignore  CHANGELOG.md  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.mjs
.github/workflows/: release.yml
scripts/: check-version.mjs
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  cloud_files.rs  duplicates.rs  elevation.rs  history.rs  latest_scan.rs  lib.rs  main.rs  models.rs  ntfs_scanner.rs  scanner.rs  schedule.rs  settings.rs
src/components/: DuplicateFilesPanel.jsx  LargeFilesPanel.jsx  ScanViews.jsx  TrendsView.jsx
src/lib/: format.js
