[package]
name = "luna-clean"
version = "0.1.0"
description = "A careful, AI-assisted Windows storage cleaner"
authors = ["Luna Clean contributors"]
edition = "2024"

[lib]
name = "luna_clean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

