[package]
name = "luna-clean"
version = "0.2.0"
description = "A careful, AI-assisted Windows storage cleaner"
authors = ["Luna Clean contributors"]
edition = "2024"

[lib]
name = "luna_clean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
walkdir = "2"
